# reminder-telergam-bot

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: log4rs.yaml
src/: database.rs  handlers.rs  main.rs  models.rs  scheduler.rs  utils.rs
