[package]
name = "reminder_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
cron = "0.15.0"
log = "0.4.25"
pretty_env_logger = "0.5.0"
regex = "1.11.1"
rusqlite = "0.33.0"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
log4rs = "1.2"
